[tool.poetry]
name = "miutex"
version = "0.1.0"
description = "Miutex is a Python mutual exclusion (mutex) library for distributed environments."
authors = ["RootNe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
